--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,5 @@
 <div id="wrapper">
-
-  <!-- Content Wrapper -->
   <div id="content-wrapper" class="d-flex flex-column">
-
     <div id="content">
 
       <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
@@ -11,7 +8,7 @@
             <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2">
             <div class="input-group-append">
               <button class="btn btn-primary" type="button">
-                <i class="fas fa-search fa-sm"></i>
+                <i class="fa fa-search"></i>
               </button>
             </div>
           </div>
@@ -34,7 +31,7 @@
                     <div class="h5 mb-0 font-weight-bold text-gray-800">1000</div>
                   </div>
                   <div class="col-auto">
-                    <i class="fas fa-calendar fa-2x text-gray-300"></i>
+                    <i class="fa fa-calendar fa-2x text-gray-300"></i>
                   </div>
                 </div>
               </div>
@@ -50,7 +47,7 @@
                     <div class="h5 mb-0 font-weight-bold text-gray-800">12 August 2019</div>
                   </div>
                   <div class="col-auto">
-                    <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
+                    <i class=" fa-dollar-sign fa-2x text-gray-300"></i>
                   </div>
                 </div>
               </div>
@@ -75,7 +72,7 @@
                     </div>
                   </div>
                   <div class="col-auto">
-                    <i class="fas fa-clipboard-list fa-2x text-gray-300"></i>
+                    <i class="fa fa-clipboard-list fa-2x text-gray-300"></i>
                   </div>
                 </div>
               </div>
@@ -91,7 +88,7 @@
                     <div class="h5 mb-0 font-weight-bold text-gray-800">8.8</div>
                   </div>
                   <div class="col-auto">
-                    <i class="fas fa-comments fa-2x text-gray-300"></i>
+                    <i class="fa fa-comments fa-2x text-gray-300"></i>
                   </div>
                 </div>
               </div>
