--- a/src/app/components/movie-dashboard/movie-dashboard.component.html
+++ b/src/app/components/movie-dashboard/movie-dashboard.component.html
@@ -1,8 +1,8 @@
 <div class="row">
     <div class="col-xl-8 col-lg-7">
-        <app-movies-list></app-movies-list>
+        <app-movies-list [movies]="movies" (onMovieClicked)="getClickedMovie($event)"></app-movies-list>
     </div>
     <div class="col-xl-4 col-lg-5">
-        <app-movie-preview></app-movie-preview>
+        <app-movie-preview [movie]="movie"></app-movie-preview>
     </div>
 </div>
