- adds movie details component and styles and routing

--- a/src/app/components/movie-dashboard/movie-preview/movie-preview.component.less
+++ b/src/app/components/movie-dashboard/movie-preview/movie-preview.component.less
@@ -10,12 +10,6 @@
     }
   }
 
-.posterImage {
-    max-height: 500px;
-}
-
-.movie-details {
-    color: #4e73df;
-    font-weight: 600;
-    font-size: 20px;
+.movie-btn {
+  color: #fff !important;
 }
