--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -3,3 +3,13 @@
     padding-left: 4rem !important;
     padding-right: 4rem !important;
 }
+
+.posterImage {
+    max-height: 500px;
+}
+
+.movie-details {
+    color: #4e73df;
+    font-weight: 600;
+    font-size: 20px;
+}
