--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,10 @@
     <div id="content">
 
       <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
-        <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
+        <div class="d-sm-flex align-items-center justify-content-between">
+          <h1 class="h3 text-primary">Movies Application</h1>
+        </div>
+        <form class="d-none d-sm-inline-block form-inline ml-auto mr-md-3 my-2 my-md-0 mw-100 navbar-search">
           <div class="input-group">
             <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..."
               aria-label="Search" aria-describedby="basic-addon2">
@@ -17,89 +20,86 @@
       </nav>
 
       <div class="container-fluid movie-content">
-        <div class="d-sm-flex align-items-center justify-content-between mb-4">
-          <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
-        </div>
 
         <router-outlet></router-outlet>
-        
+
         <div class="row">
 
-            <div class="col-xl-3 col-md-6 mb-4">
-              <div class="card border-left-primary shadow h-100 py-2">
-                <div class="card-body">
-                  <div class="row no-gutters align-items-center">
-                    <div class="col mr-2">
-                      <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Total Popular Movies</div>
-                      <div class="h5 mb-0 font-weight-bold text-gray-800">1000</div>
-                    </div>
-                    <div class="col-auto">
-                      <i class="fa fa-calendar fa-2x text-gray-300"></i>
-                    </div>
+          <div class="col-xl-3 col-md-6 mb-4">
+            <div class="card border-left-primary shadow h-100 py-2">
+              <div class="card-body">
+                <div class="row no-gutters align-items-center">
+                  <div class="col mr-2">
+                    <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Total Popular Movies</div>
+                    <div class="h5 mb-0 font-weight-bold text-gray-800">1000</div>
+                  </div>
+                  <div class="col-auto">
+                    <i class="fa fa-calendar fa-2x text-gray-300"></i>
                   </div>
                 </div>
               </div>
             </div>
-  
-            <div class="col-xl-3 col-md-6 mb-4">
-              <div class="card border-left-success shadow h-100 py-2">
-                <div class="card-body">
-                  <div class="row no-gutters align-items-center">
-                    <div class="col mr-2">
-                      <div class="text-xs font-weight-bold text-success text-uppercase mb-1">Most Popular Movie Release
-                        Date</div>
-                      <div class="h5 mb-0 font-weight-bold text-gray-800">12 August 2019</div>
-                    </div>
-                    <div class="col-auto">
-                      <i class=" fa-dollar-sign fa-2x text-gray-300"></i>
-                    </div>
+          </div>
+
+          <div class="col-xl-3 col-md-6 mb-4">
+            <div class="card border-left-success shadow h-100 py-2">
+              <div class="card-body">
+                <div class="row no-gutters align-items-center">
+                  <div class="col mr-2">
+                    <div class="text-xs font-weight-bold text-success text-uppercase mb-1">Most Popular Movie Release
+                      Date</div>
+                    <div class="h5 mb-0 font-weight-bold text-gray-800">12 August 2019</div>
+                  </div>
+                  <div class="col-auto">
+                    <i class=" fa-dollar-sign fa-2x text-gray-300"></i>
                   </div>
                 </div>
               </div>
             </div>
-  
-            <div class="col-xl-3 col-md-6 mb-4">
-              <div class="card border-left-info shadow h-100 py-2">
-                <div class="card-body">
-                  <div class="row no-gutters align-items-center">
-                    <div class="col mr-2">
-                      <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Highest Vote Count</div>
-                      <div class="row no-gutters align-items-center">
-                        <div class="col-auto">
-                          <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">500</div>
-                        </div>
-                        <div class="col">
-                          <div class="progress progress-sm mr-2">
-                            <div class="progress-bar bg-info" role="progressbar" style="width: 50%" aria-valuenow="50"
-                              aria-valuemin="0" aria-valuemax="100"></div>
-                          </div>
+          </div>
+
+          <div class="col-xl-3 col-md-6 mb-4">
+            <div class="card border-left-info shadow h-100 py-2">
+              <div class="card-body">
+                <div class="row no-gutters align-items-center">
+                  <div class="col mr-2">
+                    <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Highest Vote Count</div>
+                    <div class="row no-gutters align-items-center">
+                      <div class="col-auto">
+                        <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">500</div>
+                      </div>
+                      <div class="col">
+                        <div class="progress progress-sm mr-2">
+                          <div class="progress-bar bg-info" role="progressbar" style="width: 50%" aria-valuenow="50"
+                            aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                       </div>
                     </div>
-                    <div class="col-auto">
-                      <i class="fa fa-clipboard-list fa-2x text-gray-300"></i>
-                    </div>
+                  </div>
+                  <div class="col-auto">
+                    <i class="fa fa-clipboard-list fa-2x text-gray-300"></i>
                   </div>
                 </div>
               </div>
             </div>
-  
-            <div class="col-xl-3 col-md-6 mb-4">
-              <div class="card border-left-warning shadow h-100 py-2">
-                <div class="card-body">
-                  <div class="row no-gutters align-items-center">
-                    <div class="col mr-2">
-                      <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">Highest Average Vote Rate
-                      </div>
-                      <div class="h5 mb-0 font-weight-bold text-gray-800">8.8</div>
+          </div>
+
+          <div class="col-xl-3 col-md-6 mb-4">
+            <div class="card border-left-warning shadow h-100 py-2">
+              <div class="card-body">
+                <div class="row no-gutters align-items-center">
+                  <div class="col mr-2">
+                    <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">Highest Average Vote Rate
                     </div>
-                    <div class="col-auto">
-                      <i class="fa fa-comments fa-2x text-gray-300"></i>
-                    </div>
+                    <div class="h5 mb-0 font-weight-bold text-gray-800">8.8</div>
+                  </div>
+                  <div class="col-auto">
+                    <i class="fa fa-comments fa-2x text-gray-300"></i>
                   </div>
                 </div>
               </div>
             </div>
+          </div>
         </div>
       </div>
 
