--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -1,4 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
 .movie-content {
     padding-left: 4rem !important;
     padding-right: 4rem !important;
@@ -13,3 +12,7 @@
     font-weight: 600;
     font-size: 20px;
 }
+
+.movie-btn {
+    color: #fff !important;
+  }
