--- a/src/app/components/movie-dashboard/movie-dashboard.component.html
+++ b/src/app/components/movie-dashboard/movie-dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xl-8 col-lg-7">
-        <app-movies-list [movies]="movies" (onMovieClicked)="getClickedMovie($event)"></app-movies-list>
+        <app-movies-list [movies]="movies" (onMovieClicked)="getClickedMovie($event)" [paginationData]="paginationData" (onPageSelected)="getSelectedPage($event)"></app-movies-list>
     </div>
     <div class="col-xl-4 col-lg-5">
         <app-movie-preview [movie]="movie"></app-movie-preview>
