- fixes movie list selected row - fixes movie preview

--- a/src/app/components/movie-dashboard/movie-preview/movie-preview.component.less
+++ b/src/app/components/movie-dashboard/movie-preview/movie-preview.component.less
@@ -1,11 +1,18 @@
 .movie-preview-area {
     position: relative;
-    height: 33rem;
+    height: 35rem;
     width: 100%;
   }
   
   @media (min-width: 768px) {
     .movie-preview-area {
-      height: 33rem;
+      height: 35rem;
     }
   }
+
+  .movie-sub-details {
+    color: #4e73df;
+    font-weight: 600;
+    font-size: 20px;
+    margin-bottom: 0;
+}
