--- a/src/app/components/movie-dashboard/movie-preview/movie-preview.component.html
+++ b/src/app/components/movie-dashboard/movie-preview/movie-preview.component.html
@@ -3,17 +3,15 @@
         <h6 class="m-0 font-weight-bold text-primary">Movie Preview</h6>
         <a *ngIf="movie" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm movie-btn" (click)="goToMovie(movie)">GO TO MOVIE!</a>
     </div>
-    <div class="card-body">
+    <div class="card-body pt-0">
         <ng-container *ngIf="movie">
             <div class="movie-preview-area pb-2 poster-area row">
-                <div class="col">
-                    <img [src]="imageSrc" class="posterImage">
+                <div class="col-12 d-flex align-items-center justify-content-center">
+                    <p class="movie-sub-details float-left">{{ movie.title }}</p>
+                    <small class="float-left ml-3">(Released: {{ movie.release_date }})</small>
                 </div>
-                <div class="col">
-                    <h6>Title: </h6>
-                    <p class="movie-details">{{ movie.title }}</p>
-                    <h6>Released: </h6>
-                    <p class="movie-details">{{ movie.release_date }}</p>
+                <div class="col-12 d-flex align-items-center justify-content-center">
+                    <img [src]="imageSrc" class="posterImage">
                 </div>
             </div>
         </ng-container>
