--- a/src/app/components/movie-dashboard/movies-list/movies-list.component.html
+++ b/src/app/components/movie-dashboard/movies-list/movies-list.component.html
@@ -8,7 +8,7 @@
             <table class="table table-hover movies-table">
                 <thead>
                     <tr>
-                        <th>Title</th>
+                        <th class="row-title">Title</th>
                         <th>Popularity</th>
                         <th>Release Date</th>
                         <th>Vote Average</th>
@@ -17,7 +17,7 @@
                 </thead>
                 <tbody>
                     <ng-container *ngFor="let movie of movies; let i = index">
-                        <tr (click)="movieClicked(movie.id)">
+                        <tr (click)="movieClicked(movie.id, i)" [class.highlight]="i == selectedRow">
                             <td>{{movie.title}}</td>
                             <td>{{movie.popularity}}</td>
                             <td>{{movie.release_date}}</td>
@@ -28,8 +28,14 @@
                 </tbody>
             </table>
         </div>
-        <ngb-pagination [collectionSize]="paginationData.totalPages" [(page)]="paginationData.currentPage" 
-            [maxSize]="5" [boundaryLinks]="true" (pageChange)="onPageChanged($event)">
+        <ngb-pagination [collectionSize]="paginationData.totalPages" 
+                        [(page)]="paginationData.currentPage" 
+                        class="d-flex justify-content-center"
+                        [maxSize]="5" 
+                        [boundaryLinks]="true" 
+                        [rotate]="true" 
+                        (pageChange)="onPageChanged($event)" 
+                        size="sm">
         </ngb-pagination>
     </div>
 </div>
