--- a/src/app/components/movie-dashboard/movies-list/movies-list.component.less
+++ b/src/app/components/movie-dashboard/movies-list/movies-list.component.less
@@ -23,3 +23,12 @@
     text-align: center;
     vertical-align: middle;
 }
+
+.movies-table tr {
+  cursor: pointer;
+}
+
+.highlight {
+  color: #fff;
+  background-color: #4e73df;
+}
