--- a/src/app/components/movie-details/movie-details.component.html
+++ b/src/app/components/movie-details/movie-details.component.html
@@ -3,7 +3,7 @@
         <div class="card shadow mb-4">
             <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                 <h3 class="m-0 font-weight-bold text-primary">Movie Details</h3>
-                <a class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm movie-btn" (click)="goToMovieList()">BACK TO LIST</a>
+                <a class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm movie-btn btn-cursor" (click)="goToMovieList()">BACK TO LIST</a>
             </div>
 
             <div class="card-body">
