- added search functionality pending call with keywords query at discover movies

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,17 +6,18 @@
         <div class="d-sm-flex align-items-center justify-content-between">
           <h1 class="h3 text-primary">Movies Application</h1>
         </div>
-        <form class="d-none d-sm-inline-block form-inline ml-auto mr-md-3 my-2 my-md-0 mw-100 navbar-search">
+        <!-- Search functionality pending -->
+        <!-- <form class="d-none d-sm-inline-block form-inline ml-auto mr-md-3 my-2 my-md-0 mw-100 navbar-search">
           <div class="input-group">
-            <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..."
-              aria-label="Search" aria-describedby="basic-addon2">
+            <input type="text" class="form-control bg-light border-0 small" placeholder="Search for movies..."
+              aria-label="Search" aria-describedby="basic-addon2" [(ngModel)]="searchTerm" name="search">
             <div class="input-group-append">
-              <button class="btn btn-primary" type="button">
+              <button class="btn btn-primary" type="button" (click)="searchMovie()">
                 <i class="fa fa-search"></i>
               </button>
             </div>
           </div>
-        </form>
+        </form> -->
       </nav>
 
       <div class="container-fluid movie-content">
