- adds movie stats components - adds functionality to select 1st movie and send it to stats

--- a/src/app/components/movie-dashboard/movies-list/movies-list.component.html
+++ b/src/app/components/movie-dashboard/movies-list/movies-list.component.html
@@ -17,7 +17,7 @@
                 </thead>
                 <tbody>
                     <ng-container *ngFor="let movie of movies; let i = index">
-                        <tr (click)="movieClicked(movie.id, i)" [class.highlight]="i == selectedRow">
+                        <tr (click)="movieClicked(movie, i)" [class.highlight]="i == selectedRow" class="hoverRow">
                             <td>{{movie.title}}</td>
                             <td>{{movie.popularity}}</td>
                             <td>{{movie.release_date}}</td>
